src/test/resources/projects/negative/unsupported-nano-http-server-dependency/src/main/java/com/acme/Main.java
package com.acme;

public final class Main {
    private Main() {
    }

    public static void main(final String[] args) throws Exception {
        org.nanonative.nano.services.http.HttpServer.create();
    }
}
